Turn off swagger html
Signed-off-by: Pawel Renc <rencpawe@gmail.com>

--- a/rest-api/src/main/webapp/swagger/index.html
+++ b/rest-api/src/main/webapp/swagger/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Swagger UI</title>
-    <link href="./swagger-ui.css" rel="stylesheet" type="text/css">
+    <link href="swagger-ui.css" rel="stylesheet" type="text/css">
     <link href="./favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
     <link href="./favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
     <style>
@@ -30,8 +30,8 @@
 <body>
 <div id="swagger-ui"></div>
 
-<script src="./swagger-ui-bundle.js"></script>
-<script src="./swagger-ui-standalone-preset.js"></script>
+<script src="swagger-ui-bundle.js"></script>
+<script src="swagger-ui-standalone-preset.js"></script>
 <script>
     window.onload = function () {
         // Begin Swagger UI call region
